# Abstract

./: .env  pyproject.toml
core/: settings.py
