[tool.poetry]
name = "abstract"
version = "0.1.0"
description = ""
authors = ["Michkail <michkail@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
djongo = "^1.3.6"
django = "3.2"
pymongo = "3.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
